# edd-ps2024

./: CMakeLists.txt  MainGame.cpp  MainGame.h  Makefile  main.cpp  program
CardsHandler/: CardsHandler.cpp  CardsHandler.h
Randomizer/: Randomizer.cpp  Randomizer.h
Structures/Card/: Card.cpp  Card.h
Structures/List/: LinkedList.cpp  LinkedList.h
Structures/Queue/: Queue.cpp  Queue.h
Structures/Stack/: Stack.cpp  Stack.h
